// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

// Necessary for Next auth
model Account {
    id                       String  @id @default(cuid())
    userId                   String
    type                     String
    provider                 String
    providerAccountId        String
    refresh_token            String? // @db.Text
    access_token             String? // @db.Text
    expires_at               Int?
    token_type               String?
    scope                    String?
    id_token                 String? // @db.Text
    session_state            String?
    user                     User    @relation(fields: [userId], references: [id], onDelete: Cascade)
    refresh_token_expires_in Int?

    @@unique([provider, providerAccountId])
}

model Session {
    id           String   @id @default(cuid())
    sessionToken String   @unique
    userId       String
    expires      DateTime
    user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
    id            String    @id @default(cuid())
    name          String?
    email         String?   @unique
    emailVerified DateTime?
    image         String?
    password      String?
    createdAt     DateTime  @default(now())
    
    accounts      Account[]
    sessions      Session[]
    
    // LastPrice MVP specific relations
    listings      Listing[]     @relation("SellerListings")
    bids          Bid[]         @relation("BuyerBids")
    buyerTransactions  Transaction[] @relation("BuyerTransactions")
    sellerTransactions Transaction[] @relation("SellerTransactions")
}

model VerificationToken {
    identifier String
    token      String   @unique
    expires    DateTime

    @@unique([identifier, token])
}

enum SaleMode {
    SHORT_BURST
    LONG_BURST
}

enum Status {
    ACTIVE
    PENDING_HANDOVER
    COMPLETED
}

model Listing {
    id           String   @id @default(cuid())
    sellerId     String
    title        String
    description  String
    imageUrl     String
    displayPrice Float
    reservePrice Float
    
    saleMode     SaleMode
    
    burstChances Int?
    burstRounds  Int?
    
    status       Status   @default(ACTIVE)
    
    createdAt    DateTime @default(now())
    expiresAt    DateTime
    
    seller       User     @relation("SellerListings", fields: [sellerId], references: [id], onDelete: Cascade)
    bids         Bid[]
    transactions Transaction[]
}

model Bid {
    id        String   @id @default(cuid())
    buyerId   String
    listingId String
    amount    Float
    createdAt DateTime @default(now())
    
    buyer     User     @relation("BuyerBids", fields: [buyerId], references: [id], onDelete: Cascade)
    listing   Listing  @relation(fields: [listingId], references: [id], onDelete: Cascade)
}

model Transaction {
    id             String   @id @default(cuid())
    buyerId        String
    sellerId       String
    listingId      String
    finalPrice     Float
    buyerToken     String
    sellerToken    String
    buyerVerified  Boolean  @default(false)
    sellerVerified Boolean  @default(false)
    createdAt      DateTime @default(now())
    
    buyer          User     @relation("BuyerTransactions", fields: [buyerId], references: [id])
    seller         User     @relation("SellerTransactions", fields: [sellerId], references: [id])
    listing        Listing  @relation(fields: [listingId], references: [id])
}
